<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical">

    <ma.apps.lightup.views.GameText
        android:text="@string/app_name"
        android:textSize="18dp"
        android:textColor="@color/textColor"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ma.apps.lightup.views.GameButton
        android:id="@+id/startGame"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:foreground="@drawable/game_button_ripple"
        android:text="@string/start_game" />

    <ma.apps.lightup.views.GameButton
        android:id="@+id/scores"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:foreground="@drawable/game_button_ripple"
        android:text="@string/scores"/>

    <ma.apps.lightup.views.GameButton
        android:id="@+id/howToPlay"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:foreground="@drawable/game_button_ripple"
        android:text="@string/how_to_play"/>

    <ma.apps.lightup.views.GameButton
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:foreground="@drawable/game_button_ripple"
        android:text="@string/exit"/>

</LinearLayout>