<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ma.apps.lightup.views.GameText
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/how_to_play"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/separator" />

            <ma.apps.lightup.views.GameText
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="4dp"
                android:paddingRight="20dp"
                android:text="@string/rules_part_1"
                android:textSize="5sp" />

            <ma.apps.lightup.views.GameText
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="4dp"
                android:paddingRight="20dp"
                android:text="@string/rules_part_2"
                android:textSize="5sp" />

            <ma.apps.lightup.views.GameText
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="4dp"
                android:paddingRight="20dp"
                android:text="@string/rules_part_3"
                android:textSize="5sp" />

            <ma.apps.lightup.views.GameText
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="4dp"
                android:paddingRight="20dp"
                android:text="@string/rules_part_4"
                android:textSize="5sp" />


            <ma.apps.lightup.views.GameButton
                android:id="@+id/close"
                android:layout_width="200dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:foreground="@drawable/game_button_ripple"
                android:text="@string/close"
                app:backgroundColor="#ffc466" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>