<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bellota_bold"
            android:text="@string/little_help"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_regular"
            android:lineHeight="21sp"
            android:text="@string/goal_of_the_game"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bellota_regular"
            android:lineHeight="21sp"
            android:text="@string/rule_1"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bellota_regular"
            android:lineHeight="21sp"
            android:text="@string/rule_2"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ma.apps.lightup.views.GameButton
            android:id="@+id/gotIt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/got_it"
            android:textSize="16dp"
            app:icon="@drawable/ic_forward" />

    </LinearLayout>
</LinearLayout>