<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ma.apps.lightup.views.GameText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/scores"
                android:textColor="@color/textColor"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/separator" />

            <ma.apps.lightup.views.GameText
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/high_scores"
                android:textColor="#B8B8B8"
                android:textSize="7sp" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/scoresContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ma.apps.lightup.views.GameText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/you_have_ho_scores_yet"
                    android:textColor="@color/textColor"
                    android:textSize="7sp" />

            </LinearLayout>

            <ma.apps.lightup.views.GameButton
                android:id="@+id/close"
                android:layout_width="200dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:foreground="@drawable/game_button_ripple"
                android:text="@string/close"
                app:backgroundColor="#ffc466" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>